--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.11.1",
     "lucide-react": "^0.419.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
